fixed iframe horizonal alignments

--- a/index.css
+++ b/index.css
@@ -55,9 +55,9 @@ a:hover {
     font-size: 1.2rem;
 }
 
-
-/* .iframe-container {
+.iframe-container {
     width: 100%;
+    height: 80vh;
     margin: 0 auto;
     display: flex;
     align-content: center;
@@ -67,24 +67,6 @@ a:hover {
 
 iframe {
     border: none;
-    width: 800px;
-    height: 500vh;
-} */
-
-.iframe-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    height: 80vh;
-    border: 3px solid blue;
-  }
-  
-  iframe {
-    border: none;
-    width: 100%;
+    width: 80vh;
     height: 100%;
-    max-height: 100%;
-    max-width: 100%;
-    border: 3px solid green;
-  }
+}
